syntax = "proto3";
package com.antigravity;

option java_package = "com.antigravity.proto";
option java_multiple_files = true;
option java_outer_classname = "RaceSubscriptionProto";

message RaceSubscriptionRequest {
    bool subscribe = 1;
}
